# Rxmodule

./: README.md  settings.gradle
DavlikJvmRuntimeEnv/: build.gradle
DavlikJvmRuntimeEnv/release/: output-metadata.json
DavlikJvmRuntimeEnv/src/androidTest/java/com/custom/davlikjvmruntimeenv/: ExampleInstrumentedTest.java
DavlikJvmRuntimeEnv/src/main/: AndroidManifest.xml
DavlikJvmRuntimeEnv/src/main/cpp/: CMakeLists.txt  RuntimePart.cpp  RuntimePart.h  elf_symbol_resolver.cpp  jvmti.cpp  native-lib.cpp  scoped_thread_state_change.cpp  text.cpp
DavlikJvmRuntimeEnv/src/main/cpp/runtime/: dex_file.h
DavlikJvmRuntimeEnv/src/main/java/com/hepta/davlik/: App.java  JvmRuntime.java  MainActivity.java
DavlikJvmRuntimeEnv/src/main/java/com/hepta/davlikjvmruntimeenv/: JvmRuntime.java  MainActivity.java
DavlikJvmRuntimeEnv/src/main/res/layout/: activity_main.xml
DavlikJvmRuntimeEnv/src/main/res/values/: strings.xml
DavlikJvmRuntimeEnv/src/test/java/com/custom/davlikjvmruntimeenv/: ExampleUnitTest.java
PineCore/: build.gradle
PineCore/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  pine.cpp
PineCore/src/main/cpp/libs/arm64-v8a/: abi.json
PineCore/src/main/cpp/libs/armeabi-v7a/: abi.json
PineCore/src/main/cpp/libs/x86/: abi.json
PineCore/src/main/cpp/libs/x86_64/: abi.json
PineCore/src/main/cpp/trampoline/: trampoline_installer.cpp
app/: build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-v23/: themes.xml
dumpdex/: README.md  build.gradle
dumpdex/src/main/: AndroidManifest.xml
dumpdex/src/main/cpp/: CMakeLists.txt  dumpdex.cpp  native-lib.cpp
dumpdex/src/main/res/layout/: activity_main.xml
dumpdex/src/main/res/values/: strings.xml
dumpdex/src/main/res/values-night/: themes.xml
fridademo/: README.md  build.gradle
fridademo/src/main/: AndroidManifest.xml
fridademo/src/main/res/values/: strings.xml  themes.xml
gdbinject/: README.md  build.gradle
gdbinject/src/main/: AndroidManifest.xml
gdbinject/src/main/cpp/: CMakeLists.txt  entry.cpp
gdbinject/src/main/cpp/gdbinject/: CMakeLists.txt  arch.h  gdbinject.c  gdbinject.h  packets.c  packets.h
gdbinject/src/main/res/layout/: activity_main.xml
gdbinject/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
soinfo/: build.gradle
soinfo/src/main/: AndroidManifest.xml
soinfo/src/main/cpp/: CMakeLists.txt  checkvpn.cpp
soinfo/src/main/cpp/getifaddrs/: CMakeLists.txt  getifaddrs.cpp
soinfo/src/main/cpp/hookvpn/: CMakeLists.txt  hookvpn.cpp  hookvpn.h
soinfo/src/main/cpp/solist/: CMakeLists.txt  solist.cpp  solist.h  sotype.h
soinfo/src/main/res/values/: strings.xml
textapp/: build.gradle
textapp/src/main/: AndroidManifest.xml
textapp/src/main/res/layout/: activity_main.xml
textapp/src/main/res/values/: strings.xml
textmodule/: build.gradle
textmodule/src/main/: AndroidManifest.xml
textmodule/src/main/res/layout/: activity_main.xml
textmodule/src/main/res/values/: strings.xml
(+42 files in other folders)
